THRIFT-2370 Compiler SEGFAULTs generating HTML documentation for complex structure

Patch: Jens Geyer